# todo-challenge

./: .coveragerc  .example.env.local  .example.env.prod  .gitignore  Dockerfile  README.md  compose.yml  entrypoint.prod.sh  pg_database.sql  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  tox.ini
.github/workflows/: python-app.yml
todo_api/: models.py  serializers.py  urls.py  views.py
todo_api/migrations/: 0001_initial.py  0002_alter_task_finish_at.py
todo_api/tests/: tests.py
todolist/: settings.py  urls.py
